@@ -1,3 +1,9 @@
+
+Thu Mar 16 17:27:46 CET 2006 Paolo Molaro <lupus@ximian.com>
+
+	* serial.c: removed useless serial.h file (it was also
+	breaking the build).
+
 2006-03-09  Carlos Alberto Cortez <calberto.cortez@gmail.com>
 
 	* serial.c: Fix a pair of wrong or incomplete assignations
